--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,35 @@
 page-home {
 
 }
+
+.geolocation {
+    position:absolute;
+    border-radius:100%;
+    width:20px;
+    height:20px;
+    border: 2px solid white;
+    background:#65a3ff;
+    box-shadow: 0px 0px 2px  rgba(0,0,0,0.6);
+    -moz-box-shadow: 0px 0px 2px  rgba(0,0,0,0.6);
+    -webkit-box-shadow: 0px 0px 2px  rgba(0,0,0,0.6);
+    -o-box-shadow: 0px 0px 2px  rgba(0,0,0,0.6);
+    z-index:2;
+}
+
+.geolocationInner {
+    background:rgba(101, 163, 255, 0.4);
+    border: 1px solid rgba(101, 163, 255, 0.5);
+    width:20px;
+    height:20px;
+    border-radius:100%;
+    animation: 1.6s pulse infinite linear;
+    z-index:1;
+    position: relative;
+    left: -2px;
+    top: -2px;
+}
+
+@keyframes pulse {
+    0%  { transform: scale(1) }
+    100% { transform: scale(3) }
+}
