--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,38 +1,32 @@
 page-home {
+    .heart {
+        height:70px;
+        width:70px;
+        & .outline:before,
+        & .outline:after {
+            position: absolute;
+            content:"";
+            left: 28px;
+            top: 1px;
+            width: 39px;
+            height: 62px;
+            background: #d53423;
+            border-radius: 85px 60px 0 0;
+            transform: rotate(-45deg);
+            transform-origin: 0 100%;
+        }
 
-}
+        & .outline:before { 
+            color: white;
+            font-weight: bold;
+            content:"Love";
+        }
 
-.geolocation {
-    position:absolute;
-    border-radius:100%;
-    width:20px;
-    height:20px;
-    border: 2px solid white;
-    background:#65a3ff;
-    box-shadow: 0px 0px 2px  rgba(0,0,0,0.6);
-    -moz-box-shadow: 0px 0px 2px  rgba(0,0,0,0.6);
-    -webkit-box-shadow: 0px 0px 2px  rgba(0,0,0,0.6);
-    -o-box-shadow: 0px 0px 2px  rgba(0,0,0,0.6);
-    z-index:2;
-}
-
-.geolocationInner {
-    background:rgba(101, 163, 255, 0.4);
-    border: 1px solid rgba(101, 163, 255, 0.5);
-    width:20px;
-    height:20px;
-    border-radius:100%;
-    animation: 1.6s pulse infinite linear;
-    z-index:1;
-    position: relative;
-    left: -2px;
-    top: -2px;
-}
-
-@keyframes pulse {
-    0%  { transform: scale(1) }
-    100% { 
-        transform: scale(3);
-        opacity:0; 
+        & .outline:after {
+            left: -11px;
+            border-radius: 45px 60px 0 0;
+            transform: rotate(45deg);
+            transform-origin: 100% 100%;
+        }
     }
 }
